<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SE Task Manager</string>
    <string name="kill_all">End All</string>
    <string name="end">End</string>
    <string name="refresh">Refresh</string>
    <string name="ram">RAM</string>
    <string name="battery">Battery</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="external_storage">External Storage</string>
    <string name="storage">Storage</string>
    <string name="external_sdcard">External sdcard</string>
    <string name="options">Options</string>
    <string name="backup">Backup</string>
    <string name="uninstall">Uninstall</string>
    <string name="all">All</string>
    <string name="gather_running_app">Refreshing</string>
    <string name="can_not_read_sdcard">Can not access sdcard!</string>
    <string name="backup_msg">Backing up your apps to </string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="path">Path</string>
    <string name="confirm">Confirm</string>
    <string name="delete_confirm">Are you sure you want to delete this file?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="general">General</string>
    <string name="clear_default">Clear Default</string>
    <string name="launch">Launch</string>
    <string name="no_default_found">No default home app found</string>
    <string name="running">Running</string>
    <string name="install">Install</string>
    <string name="uninstall_backup">Uninstall/Backup</string>
	<string name="home_switch">Home Switch</string>
	<string name="summary">Summary</string>
	<string name="foreground">Forground</string>
	<string name="empty">Empty</string>
	<string name="background">Backgound</string>
	<string name="visible">Visible</string>
	<string name="service">Service</string>
	<string name="loading_apk">Loading apk from sdcard......</string>
	<string name="loading">Loading......</string>
	<string name="ignore">Ignore</string>
	<string name="clear_ignore">Clear Ignore</string>
	<string name="complete_action_using">Complete Action Using</string>
	<string name="clear_all_ignore">Clear All Ignore</string>
	<string name="ignore_all">Ignore All</string>
</resources>
