<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:orientation="vertical">
    <LinearLayout android:id="@+id/linearLayout1" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_marginTop="3dp">
        <Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="1" android:text="@string/refresh" android:id="@+id/button_refresh"></Button>
        <Button android:layout_height="wrap_content" android:id="@+id/button_end_all" android:text="@string/kill_all" android:layout_weight="1" android:layout_width="fill_parent"></Button>
        <Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="1" android:text="@string/end" android:id="@+id/button_end"></Button>
    </LinearLayout>
    <ListView android:id="@+id/android:list" android:layout_height="wrap_content" android:layout_width="wrap_content"></ListView>
    <ProgressBar android:id="@+id/progressBar1" android:layout_gravity="center" android:layout_height="wrap_content" android:layout_width="wrap_content"></ProgressBar>
</LinearLayout>
