<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:fillViewport="true">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent" android:layout_height="match_parent"
		android:orientation="vertical">
		<TextView android:id="@+id/textView1" android:layout_height="wrap_content"
			android:background="@color/dark" android:textColor="@color/white"
			android:textStyle="bold" android:layout_width="fill_parent"
			android:padding="2dp" android:text="@string/general"></TextView>
		<LinearLayout android:id="@+id/linearLayout1"
			android:layout_height="wrap_content" android:layout_width="fill_parent"
			android:layout_marginTop="10dp">
			<TextView android:id="@+id/textView2" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textColor="@color/white"
				android:textSize="17dp" android:text="@string/ram"
				android:layout_marginLeft="5dp" android:layout_weight="1"></TextView>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/textView_memInfo"
				android:layout_gravity="right" android:layout_marginRight="5dp"
				android:textSize="15dp"></TextView>
		</LinearLayout>
		<ProgressBar android:layout_height="wrap_content"
			android:id="@+id/progressBar1" style="?android:attr/progressBarStyleHorizontal"
			android:layout_width="fill_parent" android:layout_margin="5dp"></ProgressBar>
		<LinearLayout android:id="@+id/linearLayout2"
			android:layout_height="wrap_content" android:layout_width="match_parent"
			android:layout_marginTop="10dp">
			<TextView android:id="@+id/textView4" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textColor="@color/white"
				android:textSize="17dp" android:layout_weight="1"
				android:layout_marginLeft="5dp" android:text="@string/battery"></TextView>
			<ImageView android:src="@drawable/battery_charging"
				android:id="@+id/imageView_battery" android:layout_height="wrap_content"
				android:layout_marginRight="2dp" android:layout_width="wrap_content"
				android:layout_gravity="center"></ImageView>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginRight="5dp"
				android:textSize="15dp" android:id="@+id/textView_batteryinfo"></TextView>
		</LinearLayout>
		<ProgressBar android:id="@+id/progressBar2"
			android:layout_height="wrap_content" style="?android:attr/progressBarStyleHorizontal"
			android:layout_width="fill_parent" android:layout_margin="5dp"
			android:progressDrawable="@drawable/custom_progressbar" android:max="100"></ProgressBar>
		<TextView android:layout_height="wrap_content" android:id="@+id/textView_storage"
			android:layout_width="fill_parent" android:layout_marginTop="10dp"
			android:background="@color/dark" android:text="@string/storage"
			android:textColor="@color/white" android:textStyle="bold"
			android:padding="2dp"></TextView>

		<LinearLayout android:id="@+id/linearLayout2"
			android:layout_height="wrap_content" android:layout_width="match_parent"
			android:layout_marginTop="10dp">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textColor="@color/white"
				android:textSize="17dp" android:layout_weight="1"
				android:layout_marginLeft="5dp" android:text="@string/internal_storage"
				android:id="@+id/textView8"></TextView>
			<TextView android:text="TextView" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginRight="5dp"
				android:id="@+id/textView_internal" android:textSize="15dp"></TextView>
		</LinearLayout>
		<ProgressBar android:layout_height="wrap_content"
			style="?android:attr/progressBarStyleHorizontal"
			android:layout_width="fill_parent" android:layout_margin="5dp"
			android:id="@+id/progressBar3"></ProgressBar>
		<LinearLayout android:id="@+id/linearLayout2"
			android:layout_height="wrap_content" android:layout_width="match_parent"
			android:layout_marginTop="10dp">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textColor="@color/white"
				android:textSize="17dp" android:layout_weight="1"
				android:layout_marginLeft="5dp" android:text="@string/external_storage"
				android:id="@+id/textView9"></TextView>
			<TextView android:text="TextView" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginRight="5dp"
				android:id="@+id/textView_external" android:textSize="15dp"></TextView>
		</LinearLayout>
		<ProgressBar android:layout_height="wrap_content"
			style="?android:attr/progressBarStyleHorizontal"
			android:layout_width="fill_parent" android:layout_margin="5dp"
			android:id="@+id/progressBar4"></ProgressBar>
		<LinearLayout android:id="@+id/linearLayout2"
			android:layout_height="wrap_content" android:layout_width="match_parent"
			android:layout_marginTop="10dp">
		</LinearLayout>

	</LinearLayout>
</ScrollView>
